Adicionando dependência do Playground do GraphQL

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
 			<artifactId>graphql-java-spring-boot-starter-webmvc</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.graphql-java-kickstart</groupId>
+			<artifactId>playground-spring-boot-starter</artifactId>
+			<version>5.10.0</version>
+			<scope>runtime</scope>
+		</dependency>
 
 		<!-- DADOS -->
 		<dependency>
