--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,11 @@
 image: openjdk:8-jdk
 
 before_script:
-  - pwd
   - cd /opt
   - wget http://ftp.unicamp.br/pub/apache/maven/maven-3/3.6.2/binaries/apache-maven-3.6.2-bin.tar.gz
   - tar xzvf apache-maven-3.6.2-bin.tar.gz
   - export PATH=${PATH}:/opt/apache-maven-3.6.2/bin/
-  - cd /
+  - cd /builds/magalhaesdaniel2009/agenda-pets
 
 cache:
   key: BUILD
