--- a/pom.xml
+++ b/pom.xml
@@ -77,12 +77,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>com.graphql-java-kickstart</groupId>
 			<artifactId>graphql-spring-boot-starter-test</artifactId>
 			<version>5.10.0</version>
 			<scope>runtime</scope>
-		</dependency>
+		</dependency>-->
 		
 		<!-- OUTROS -->
 		<dependency>
