Definição da porta a partir da variavel de ambiente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=${PORT:5000}
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://ec2-23-21-115-109.compute-1.amazonaws.com:5432/dbnbvpbctfbajt?currentSchema=api
 spring.datasource.username=yjflrxusslqhnw
