--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,7 @@ build:
   stage: build
   script:
     - mvn clean package
+    - mvn package -Dp.type=jar
   artifacts:
     name: Pacote-Build
     paths:
@@ -46,7 +47,7 @@ deploy_heroku:
     - curl https://cli-assets.heroku.com/install.sh | sh
   script:
     - heroku plugins:install java
-    - heroku deploy:jar target/agenda-pets-0.0.1-SNAPSHOT.jar --app dn-teste
+    - heroku deploy:jar target/ROOT.jar --app dn-teste
   cache:
     key: BUILD
     paths:
