Ajuste no gitlab-ci para compatibilidade com a versão self-hosted

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,10 +57,11 @@ deploy_heroku:
   environment:
     name: HerokuTest
     url: https://dn-teste.herokuapp.com/playground
-  rules:
-    - if: '$DEPLOY_MODE == "HEROKU"'
-      when: on_success
-    - when: manual
+#  rules:
+#    - if: '$DEPLOY_MODE == "HEROKU"'
+#      when: on_success
+#    - when: manual
+  when: manual
   
 #deploy_ssh:
 #  stage: deploy
@@ -104,7 +105,8 @@ deploy_ssh:
   environment:
     name: SshEnv
     url: http://petshop-api-graphql.inema.ba.gov.br/playground
-  rules:
-    - if: '$DEPLOY_MODE == "SSH"'
-      when: on_success
-    - when: manual
+#  rules:
+#    - if: '$DEPLOY_MODE == "SSH"'
+#      when: on_success
+#    - when: manual
+  when: manual
