Remoção do cache, e dependência dos artefatos nos jobs de deploy

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,12 +7,6 @@ before_script:
   - export PATH=${PATH}:/opt/apache-maven-3.6.2/bin/
   - cd $CI_PROJECT_DIR
 
-cache:
-  key: BUILD
-  paths:
-    - target/*.jar
-    - target/*.war
-
 stages:
   - test
   - build
@@ -34,26 +28,16 @@ build:
       - target/*.jar
       - target/*.war
     expire_in: 1 week
-  cache:
-    key: BUILD
-    paths:
-      - target/*.jar
-      - target/*.war
-    policy: push
 
 deploy_heroku:
   stage: deploy
+  dependencies:
+    - build
   before_script:
     - curl https://cli-assets.heroku.com/install.sh | sh
   script:
     - heroku plugins:install java
     - heroku deploy:jar target/ROOT.jar --app dn-teste
-  cache:
-    key: BUILD
-    paths:
-      - target/*.jar
-      - target/*.war
-    policy: pull
   environment:
     name: HerokuTest
     url: https://dn-teste.herokuapp.com/playground
@@ -73,12 +57,6 @@ deploy_heroku:
 #  script:
 #    - sshpass -p $SSH_SENHA ssh -tt ${SSH_USUARIO}@${SSH_SERVIDOR} "cd $SSH_SERVICES_SOURCE_PATH;echo $SSH_SENHA | sudo -S git pull"
 #    - sshpass -p $SSH_SENHA ssh -tt ${SSH_USUARIO}@${SSH_SERVIDOR} "cd $SSH_NGINX_SERVICES_PATH;echo $SSH_SENHA | sudo -S ./run.sh --proxy"
-#  cache:
-#    key: BUILD
-#    paths:
-#      - target/*.jar
-#      - target/*.war
-#    policy: pull
 #  environment:
 #    name: SshEnv
 #    url: http://petshop-api-graphql.inema.ba.gov.br/playground
@@ -86,6 +64,8 @@ deploy_heroku:
 
 deploy_ssh:
   stage: deploy
+  dependencies:
+    - build
   before_script:
     - apt update
     - apt install sshpass
@@ -96,12 +76,6 @@ deploy_ssh:
     - sshpass -p $SSH_SENHA scp target/*.war ${SSH_USUARIO}@${SSH_SERVIDOR}:${SSH_PUBLIC_PATH}/${CI_COMMIT_SHA}
     - sshpass -p $SSH_SENHA ssh ${SSH_USUARIO}@${SSH_SERVIDOR} "cd $CI_COMMIT_SHA; echo $SSH_SENHA | sudo -S mv *.war $SSH_SERVICES_SOURCE_PATH/target"
     - sshpass -p $SSH_SENHA ssh ${SSH_USUARIO}@${SSH_SERVIDOR} "echo $SSH_SENHA | sudo -S rm -r $CI_COMMIT_SHA"
-  cache:
-    key: BUILD
-    paths:
-      - target/*.jar
-      - target/*.war
-    policy: pull
   environment:
     name: SshEnv
     url: http://petshop-api-graphql.inema.ba.gov.br/playground
